# -agent-session-harness

./: .gitattributes  .gitignore  AGENTS.md  AI_INDEX.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude/skills/worker-launch/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: adoption-guide.md  compatibility.md  migration-guide.ko.md  migration-guide.md  public-contract.ko.md  public-contract.md  release-model.ko.md  release-model.md
docs/ops/: agent-operations.md  model-routing.md  operating-protocol.md  resume-policy.md  review-policy.md  session-packets.md  worktree-drift.md
docs/specs/: AGENTS.md  task-spec.md
docs/specs/project-roadmap/: decision-log.md
examples/sample-consumer/: AGENTS.md  AI_INDEX.md  README.md
examples/sample-consumer/docs/specs/: task-spec.md
examples/sample-consumer/docs/specs/project-roadmap/: decision-log.md
scripts/: ai_worker  bootstrap_consumer  start_worker_session
tests/: test_session_identity.py
tools/harness/: README.md  __init__.py  __main__.py  agent_session.py  artifacts.py  dispatch.py  handoff.py  handoff_events.py  handoff_identity.py  handoff_journal.py  handoff_liveness.py  handoff_reduce.py  handoff_render.py  handoff_types.py  pretooluse_guard.py  session_identity.py  session_launcher.py  triggers.example.yml
